// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/global/product_switcher_menu should match snapshot with id 1`] = `
<MenuGroup>
  <div
    onClick={[Function]}
  >
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_write_billing",
        ]
      }
    >
      <MenuCloudTrial
        id="menuCloudTrial"
      />
    </Connect(SystemPermissionGate)>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_write_about_edition_and_license",
        ]
      }
    >
      <MenuStartTrial
        id="startTrial"
      />
    </Connect(SystemPermissionGate)>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_read_about_edition_and_license",
          "sysconsole_read_billing",
          "sysconsole_read_reporting_site_statistics",
          "sysconsole_read_reporting_team_statistics",
          "sysconsole_read_reporting_server_logs",
          "sysconsole_read_user_management_users",
          "sysconsole_read_user_management_groups",
          "sysconsole_read_user_management_teams",
          "sysconsole_read_user_management_channels",
          "sysconsole_read_user_management_permissions",
          "sysconsole_read_site_customization",
          "sysconsole_read_site_localization",
          "sysconsole_read_site_users_and_teams",
          "sysconsole_read_site_notifications",
          "sysconsole_read_site_announcement_banner",
          "sysconsole_read_site_emoji",
          "sysconsole_read_site_posts",
          "sysconsole_read_site_file_sharing_and_downloads",
          "sysconsole_read_site_public_links",
          "sysconsole_read_site_notices",
          "sysconsole_read_environment_web_server",
          "sysconsole_read_environment_database",
          "sysconsole_read_environment_elasticsearch",
          "sysconsole_read_environment_file_storage",
          "sysconsole_read_environment_image_proxy",
          "sysconsole_read_environment_smtp",
          "sysconsole_read_environment_push_notification_server",
          "sysconsole_read_environment_high_availability",
          "sysconsole_read_environment_rate_limiting",
          "sysconsole_read_environment_logging",
          "sysconsole_read_environment_session_lengths",
          "sysconsole_read_environment_performance_monitoring",
          "sysconsole_read_environment_developer",
          "sysconsole_read_authentication_signup",
          "sysconsole_read_authentication_email",
          "sysconsole_read_authentication_password",
          "sysconsole_read_authentication_mfa",
          "sysconsole_read_authentication_ldap",
          "sysconsole_read_authentication_saml",
          "sysconsole_read_authentication_openid",
          "sysconsole_read_authentication_guest_access",
          "sysconsole_read_plugins",
          "sysconsole_read_integrations_integration_management",
          "sysconsole_read_integrations_bot_accounts",
          "sysconsole_read_integrations_gif",
          "sysconsole_read_integrations_cors",
          "sysconsole_read_compliance_data_retention_policy",
          "sysconsole_read_compliance_compliance_export",
          "sysconsole_read_compliance_compliance_monitoring",
          "sysconsole_read_compliance_custom_terms_of_service",
          "sysconsole_read_experimental_features",
          "sysconsole_read_experimental_feature_flags",
          "sysconsole_read_experimental_bleve",
        ]
      }
    >
      <MenuItemLink
        icon={
          <Icon
            glyph="application-cog"
            size={16}
          />
        }
        id="systemConsole"
        show={true}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={
        <Icon
          glyph="webhook-incoming"
          size={16}
        />
      }
      id="integrations"
      show={false}
      text="Integrations"
      to="//integrations"
    />
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "sysconsole_write_plugins",
        ]
      }
      teamId=""
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(MarketplaceModal)",
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="apps"
            size={16}
          />
        }
        id="marketplaceModal"
        modalId="plugin_marketplace"
        show={false}
        text="Marketplace"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemExternalLink
      icon={
        <Icon
          glyph="download-outline"
          size={16}
        />
      }
      id="nativeAppLink"
      show={true}
      text="Download Apps"
      url="test–link"
    />
    <MenuItemToggleModalRedux
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(AboutBuildModal)",
          "type": [Function],
        }
      }
      icon={
        <Icon
          glyph="information-outline"
          size={16}
        />
      }
      id="about"
      modalId="about"
      show={true}
      text="About "
    />
  </div>
</MenuGroup>
`;

exports[`components/global/product_switcher_menu should match snapshot with most of the thing enabled 1`] = `
<MenuGroup>
  <div
    onClick={[Function]}
  >
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_write_billing",
        ]
      }
    >
      <MenuCloudTrial
        id="menuCloudTrial"
      />
    </Connect(SystemPermissionGate)>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_write_about_edition_and_license",
        ]
      }
    >
      <MenuStartTrial
        id="startTrial"
      />
    </Connect(SystemPermissionGate)>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_read_about_edition_and_license",
          "sysconsole_read_billing",
          "sysconsole_read_reporting_site_statistics",
          "sysconsole_read_reporting_team_statistics",
          "sysconsole_read_reporting_server_logs",
          "sysconsole_read_user_management_users",
          "sysconsole_read_user_management_groups",
          "sysconsole_read_user_management_teams",
          "sysconsole_read_user_management_channels",
          "sysconsole_read_user_management_permissions",
          "sysconsole_read_site_customization",
          "sysconsole_read_site_localization",
          "sysconsole_read_site_users_and_teams",
          "sysconsole_read_site_notifications",
          "sysconsole_read_site_announcement_banner",
          "sysconsole_read_site_emoji",
          "sysconsole_read_site_posts",
          "sysconsole_read_site_file_sharing_and_downloads",
          "sysconsole_read_site_public_links",
          "sysconsole_read_site_notices",
          "sysconsole_read_environment_web_server",
          "sysconsole_read_environment_database",
          "sysconsole_read_environment_elasticsearch",
          "sysconsole_read_environment_file_storage",
          "sysconsole_read_environment_image_proxy",
          "sysconsole_read_environment_smtp",
          "sysconsole_read_environment_push_notification_server",
          "sysconsole_read_environment_high_availability",
          "sysconsole_read_environment_rate_limiting",
          "sysconsole_read_environment_logging",
          "sysconsole_read_environment_session_lengths",
          "sysconsole_read_environment_performance_monitoring",
          "sysconsole_read_environment_developer",
          "sysconsole_read_authentication_signup",
          "sysconsole_read_authentication_email",
          "sysconsole_read_authentication_password",
          "sysconsole_read_authentication_mfa",
          "sysconsole_read_authentication_ldap",
          "sysconsole_read_authentication_saml",
          "sysconsole_read_authentication_openid",
          "sysconsole_read_authentication_guest_access",
          "sysconsole_read_plugins",
          "sysconsole_read_integrations_integration_management",
          "sysconsole_read_integrations_bot_accounts",
          "sysconsole_read_integrations_gif",
          "sysconsole_read_integrations_cors",
          "sysconsole_read_compliance_data_retention_policy",
          "sysconsole_read_compliance_compliance_export",
          "sysconsole_read_compliance_compliance_monitoring",
          "sysconsole_read_compliance_custom_terms_of_service",
          "sysconsole_read_experimental_features",
          "sysconsole_read_experimental_feature_flags",
          "sysconsole_read_experimental_bleve",
        ]
      }
    >
      <MenuItemLink
        icon={
          <Icon
            glyph="application-cog"
            size={16}
          />
        }
        id="systemConsole"
        show={true}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={
        <Icon
          glyph="webhook-incoming"
          size={16}
        />
      }
      id="integrations"
      show={true}
      text="Integrations"
      to="//integrations"
    />
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "sysconsole_write_plugins",
        ]
      }
      teamId=""
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(MarketplaceModal)",
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="apps"
            size={16}
          />
        }
        id="marketplaceModal"
        modalId="plugin_marketplace"
        show={true}
        text="Marketplace"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemExternalLink
      icon={
        <Icon
          glyph="download-outline"
          size={16}
        />
      }
      id="nativeAppLink"
      show={true}
      text="Download Apps"
      url="test–link"
    />
    <MenuItemToggleModalRedux
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(AboutBuildModal)",
          "type": [Function],
        }
      }
      icon={
        <Icon
          glyph="information-outline"
          size={16}
        />
      }
      id="about"
      modalId="about"
      show={true}
      text="About "
    />
  </div>
</MenuGroup>
`;

exports[`components/global/product_switcher_menu should show integrations should show integrations modal 1`] = `
<Fragment>
  <li
    className="MenuGroup menu-divider"
    onClick={[Function]}
  />
  <div
    onClick={[Function]}
  >
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_write_billing",
        ]
      }
    >
      <MenuCloudTrial
        id="menuCloudTrial"
      />
    </Connect(SystemPermissionGate)>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_write_about_edition_and_license",
        ]
      }
    >
      <MenuStartTrial
        id="startTrial"
      />
    </Connect(SystemPermissionGate)>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "sysconsole_read_about_edition_and_license",
          "sysconsole_read_billing",
          "sysconsole_read_reporting_site_statistics",
          "sysconsole_read_reporting_team_statistics",
          "sysconsole_read_reporting_server_logs",
          "sysconsole_read_user_management_users",
          "sysconsole_read_user_management_groups",
          "sysconsole_read_user_management_teams",
          "sysconsole_read_user_management_channels",
          "sysconsole_read_user_management_permissions",
          "sysconsole_read_site_customization",
          "sysconsole_read_site_localization",
          "sysconsole_read_site_users_and_teams",
          "sysconsole_read_site_notifications",
          "sysconsole_read_site_announcement_banner",
          "sysconsole_read_site_emoji",
          "sysconsole_read_site_posts",
          "sysconsole_read_site_file_sharing_and_downloads",
          "sysconsole_read_site_public_links",
          "sysconsole_read_site_notices",
          "sysconsole_read_environment_web_server",
          "sysconsole_read_environment_database",
          "sysconsole_read_environment_elasticsearch",
          "sysconsole_read_environment_file_storage",
          "sysconsole_read_environment_image_proxy",
          "sysconsole_read_environment_smtp",
          "sysconsole_read_environment_push_notification_server",
          "sysconsole_read_environment_high_availability",
          "sysconsole_read_environment_rate_limiting",
          "sysconsole_read_environment_logging",
          "sysconsole_read_environment_session_lengths",
          "sysconsole_read_environment_performance_monitoring",
          "sysconsole_read_environment_developer",
          "sysconsole_read_authentication_signup",
          "sysconsole_read_authentication_email",
          "sysconsole_read_authentication_password",
          "sysconsole_read_authentication_mfa",
          "sysconsole_read_authentication_ldap",
          "sysconsole_read_authentication_saml",
          "sysconsole_read_authentication_openid",
          "sysconsole_read_authentication_guest_access",
          "sysconsole_read_plugins",
          "sysconsole_read_integrations_integration_management",
          "sysconsole_read_integrations_bot_accounts",
          "sysconsole_read_integrations_gif",
          "sysconsole_read_integrations_cors",
          "sysconsole_read_compliance_data_retention_policy",
          "sysconsole_read_compliance_compliance_export",
          "sysconsole_read_compliance_compliance_monitoring",
          "sysconsole_read_compliance_custom_terms_of_service",
          "sysconsole_read_experimental_features",
          "sysconsole_read_experimental_feature_flags",
          "sysconsole_read_experimental_bleve",
        ]
      }
    >
      <MenuItemLink
        icon={
          <Icon
            glyph="application-cog"
            size={16}
          />
        }
        id="systemConsole"
        show={true}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={
        <Icon
          glyph="webhook-incoming"
          size={16}
        />
      }
      id="integrations"
      show={true}
      text="Integrations"
      to="//integrations"
    />
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "sysconsole_write_plugins",
        ]
      }
      teamId=""
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(MarketplaceModal)",
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="apps"
            size={16}
          />
        }
        id="marketplaceModal"
        modalId="plugin_marketplace"
        show={false}
        text="Marketplace"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemExternalLink
      icon={
        <Icon
          glyph="download-outline"
          size={16}
        />
      }
      id="nativeAppLink"
      show={true}
      text="Download Apps"
      url="test–link"
    />
    <MenuItemToggleModalRedux
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(AboutBuildModal)",
          "type": [Function],
        }
      }
      icon={
        <Icon
          glyph="information-outline"
          size={16}
        />
      }
      id="about"
      modalId="about"
      show={true}
      text="About "
    />
  </div>
</Fragment>
`;
